--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 DB_HOST=54.164.248.208
 DB_USER=edwin
-DB_PASSWORD=
-DB_NAME=task_manager
-PORT=3306
+DB_PASSWORD=edwin
+DB_NAME=dataa
+DB_PORT=3306
+JWT_SECRET=iiIlFkb8kF0X62Vjr5QtJ+AU5UfrJZbImseVr8he6mA=
+PORT=5000
