--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DB_HOST=54.164.248.208
-DB_USER=edwin
-DB_PASSWORD=edwin
-DB_NAME=dataa
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=jesus25
+DB_NAME=task_manager
 DB_PORT=3306
 JWT_SECRET=iiIlFkb8kF0X62Vjr5QtJ+AU5UfrJZbImseVr8he6mA=
 PORT=5000
